Added registration form

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,26 +7,26 @@
 
    <!-- #CSS Links -->
     <!-- Basic Styles -->
-    <link rel="stylesheet" type="text/css" media="screen" href="bower_components/frontend-files/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="bower_components/frontend-files/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/smart_admin/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/smart_admin/font-awesome.min.css">
 
     <!-- SmartAdmin Styles : Caution! DO NOT change the order -->
-    <link rel="stylesheet" type="text/css" media="screen" href="bower_components/frontend-files/css/smartadmin-production-plugins.min.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="bower_components/frontend-files/css/smartadmin-production.min.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="bower_components/frontend-files/css/smartadmin-skins.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/smart_admin/smartadmin-production-plugins.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/smart_admin/smartadmin-production.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/smart_admin/smartadmin-skins.min.css">
 
     <!-- SmartAdmin AngularJS Fixes -->
-    <link rel="stylesheet" type="text/css" media="screen" href="bower_components/frontend-files/css/fixes.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/smart_admin/fixes.css">
 
     <!-- SmartAdmin RTL Support (Not using RTL? Disable the CSS below to save bandwidth) -->
-    <link rel="stylesheet" type="text/css" media="screen" href="bower_components/frontend-files/css/smartadmin-rtl.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/smart_admin/smartadmin-rtl.min.css">
 
     <!-- We recommend you use "your_style.css" to override SmartAdmin
     specific styles this will also ensure you retrain your customization with each SmartAdmin update.
     <link rel="stylesheet" type="text/css" media="screen" href="css/your_style.css"> -->
 
     <!-- Demo purpose only: goes with demo.js, you can delete this css when designing your own WebApp -->
-    <link rel="stylesheet" type="text/css" media="screen" href="bower_components/frontend-files/css/demo.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/smart_admin/demo.min.css">
 
     <!-- #FAVICONS -->
     <link rel="shortcut icon" href="styles/img/favicon/favicon.ico" type="image/x-icon">
